--- a/src/mytunes-front/src/style/components/lecteur.css
+++ b/src/mytunes-front/src/style/components/lecteur.css
@@ -18,3 +18,14 @@
     border : 1px solid gray;
     border-radius : 15px;
 }
+
+.lecteur div.lecteurDiv h1 {
+    text-align : center;
+    font-size : 16px;
+}
+
+.lecteur div.lecteurDiv h2 {
+    text-align : center;
+    font-size : 12px;
+    color : grey;
+}
