--- a/src/mytunes-front/src/style/components/listeMusiques.css
+++ b/src/mytunes-front/src/style/components/listeMusiques.css
@@ -13,10 +13,10 @@
 
 .listeMusiques table tr:nth-child(odd) { background-color : white; }
 .listeMusiques table tr:nth-child(even) { background-color : #ececec; }
-.listeMusiques table tr td { border : none; white-space: nowrap; }
+.listeMusiques table tr td { border : none; white-space: nowrap; border-left : 1px dotted lightgrey; padding : 1px 5px; }
 .listeMusiques table tr { border : 1px solid lightgrey; }
 
-.listeMusiques table tr td.action       { width : 5%;   text-align : center; }
+.listeMusiques table tr td.action       { width : 5%;   text-align : center; cursor : pointer; }
 .listeMusiques table tr td.titre        { width : 16%;  text-align : left; }
 .listeMusiques table tr td.artiste      { width : 16%;  text-align : left; }
 .listeMusiques table tr td.duree        { width : 5%;   text-align : center; }
@@ -24,5 +24,7 @@
 .listeMusiques table tr td.genre        { width : 15%;  text-align : left; }
 .listeMusiques table tr td.classement   { width : 10%;  text-align : center; }
 .listeMusiques table tr td.commentaire  { width : 25%;  text-align : left; }
+
+.listeMusiques .ratingStar { cursor : pointer; }
 
 
