--- a/src/mytunes-front/src/style/components/playlist.css
+++ b/src/mytunes-front/src/style/components/playlist.css
@@ -50,3 +50,5 @@
 #playlistTab li span.play { width : 25px; text-align : center; cursor : pointer; }
 #playlistTab li span.titre { width : calc(var(--playlist-tab-width) - 65px); }
 #playlistTab li span.duree { width : 35px; color : grey; font-size : 12px; line-height : var(--general-font-size); text-align : right; padding-right : 3px; }
+
+#playlistTab li svg      { height : 16px !important; width : 16px !important; }
