--- a/src/mytunes-front/src/style/components/listeMusiques.css
+++ b/src/mytunes-front/src/style/components/listeMusiques.css
@@ -30,6 +30,7 @@
 
 .listeMusiques table tr td.action svg      { height : 16px !important; width : 16px !important; }
 
+.listeMusiques .fetching { color : grey; }
 .listeMusiques .ratingStar { cursor : pointer; }
 
 .listeMusiques .textField {
