--- a/src/mytunes-front/src/style/components/listeMusiques.css
+++ b/src/mytunes-front/src/style/components/listeMusiques.css
@@ -1,47 +1,86 @@
-.listeMusiques table {
-    width : 100%;
-}
-
-.listeMusiques table th { background-color : #c5c5c5; }
-
 .listeMusiques {
     display: inline-block;
     overflow: auto;
     width: 100%;
     height: calc(100vh - var(--lecteur-height));
-    border-top : 1px solid grey;
 }
 
-.listeMusiques table tr:nth-child(odd) { background-color : white; }
-.listeMusiques table tr:nth-child(even) { background-color : #ececec; }
-.listeMusiques table tr td { border : none; white-space: nowrap; border-left : 1px dotted lightgrey; padding : 1px 5px; }
+
+.listeMusiques table {
+    width : 100%;
+}
+
+.listeMusiques thead {
+    display:block;
+}
+.listeMusiques tbody {
+    display:block;
+    height:50em; /* 5 times the equivalent of a text "size". */
+    overflow-y:scroll;
+}
+
+.listeMusiques table th { background-color : #c5c5c5; }
+
+.listeMusiques table tbody tr:nth-child(odd) { background-color : white; }
+.listeMusiques table tbody tr:nth-child(even) { background-color : #ececec; }
+.listeMusiques th, .listeMusiques td { border : none; white-space: nowrap; border-left : 1px dotted black; padding : 1px 5px; }
 .listeMusiques table tr { border : 1px solid lightgrey; }
 
-.listeMusiques table tr td.action       { width : 3%;   text-align : center; cursor : pointer; }
-.listeMusiques table tr td.titre        { width : 17%;  text-align : left; }
-.listeMusiques table tr td.artiste      { width : 17%;  text-align : left; }
-.listeMusiques table tr td.duree        { width : 5%;   text-align : center; }
-.listeMusiques table tr td.bpm          { width : 4%; }
+.listeMusiques table thead tr { width : calc(100% - 20px); }
+
+.listeMusiques table th.action, .listeMusiques table tr td.action       { width : 5%;   text-align : center; cursor : pointer; }
+.listeMusiques table th.titre, .listeMusiques table tr td.titre        { width : 16%;  text-align : left; }
+.listeMusiques table th.artiste, .listeMusiques table tr td.artiste      { width : 15%;  text-align : left; }
+.listeMusiques table th.duree, .listeMusiques table tr td.duree        { width : 7%;   text-align : center; }
+.listeMusiques table th.bpm, .listeMusiques table tr td.bpm          { width : 5%; }
+.listeMusiques table th.genre, .listeMusiques table tr td.genre        { width : 15%;  text-align : left; }
+.listeMusiques table th.classement, .listeMusiques table tr td.classement   { width : 8%;  text-align : center; }
+.listeMusiques table th.commentaire, .listeMusiques table tr td.commentaire  { width : 29%;  text-align : left; }
+
+.listeMusiques table tr th.action, .listeMusiques table tr td.classement span.ratingStar   { margin : 0 1px; font-size : calc(var(--general-font-size) + 2px); }
 .listeMusiques table tr td.bpm input    { text-align : center; }
-.listeMusiques table tr td.genre        { width : 15%;  text-align : left; }
-.listeMusiques table tr td.classement   { width : 8%;  text-align : center; }
-.listeMusiques table tr td.classement span.ratingStar   { margin : 0 1px; font-size : calc(var(--general-font-size) + 2px); }
-.listeMusiques table tr td.commentaire  { width : 31%;  text-align : left; }
 
 .listeMusiques table tr td.action svg      { height : 16px !important; width : 16px !important; }
 
 .listeMusiques .fetching { color : grey; }
 .listeMusiques .ratingStar { cursor : pointer; }
 
-.listeMusiques .textField {
+.listeMusiques tbody .textField {
     font-size : var(--general-font-size) !important;
     line-height : var(--general-font-size) !important;
     height : calc(var(--general-font-size) + 6px) !important;
 }
 
-.listeMusiques .textField input:focus {
+.listeMusiques tbody .textField input:focus {
     border : 1px solid grey !important;
     background : white !important;
+}
+
+
+
+
+tr#searchBar {
+    border-bottom : 1px solid grey;
+    height : 25px;
+}
+
+tr#searchBar th {
+    background : transparent;
+    border : none;
+}
+
+tr#searchBar svg {
+    vertical-align : middle;
+}
+
+tr#searchBar .textField {
+    font-size : var(--general-font-size) !important;
+    line-height : var(--general-font-size) !important;
+    height : calc(var(--general-font-size) + 6px) !important;
+}
+
+tr#searchBar .textField hr {
+    bottom : -1px !important;
 }
 
 
