--- a/src/mytunes-front/src/style/components/listeMusiques.css
+++ b/src/mytunes-front/src/style/components/listeMusiques.css
@@ -1,6 +1,6 @@
 .listeMusiques {
     display: inline-block;
-    overflow: auto;
+    overflow: hidden;
     width: 100%;
     height: calc(100vh - var(--lecteur-height));
 }
@@ -21,8 +21,9 @@
 
 .listeMusiques table th { background-color : #c5c5c5; }
 
-.listeMusiques table tbody tr:nth-child(odd) { background-color : white; }
-.listeMusiques table tbody tr:nth-child(even) { background-color : #ececec; }
+.listeMusiques table tbody tr.hidden { display : none; }
+.listeMusiques table tbody tr:not(.hidden):nth-child(odd) { background-color : white; }
+.listeMusiques table tbody tr:not(.hidden):nth-child(even) { background-color : #ececec; }
 .listeMusiques th, .listeMusiques td { border : none; white-space: nowrap; border-left : 1px dotted black; padding : 1px 5px; }
 .listeMusiques table tr { border : 1px solid lightgrey; }
 
@@ -40,7 +41,17 @@
 .listeMusiques table tr th.action, .listeMusiques table tr td.classement span.ratingStar   { margin : 0 1px; font-size : calc(var(--general-font-size) + 2px); }
 .listeMusiques table tr td.bpm input    { text-align : center; }
 
-.listeMusiques table tr td.action svg      { height : 16px !important; width : 16px !important; }
+/*.listeMusiques table tr td.action svg      { height : 16px !important; width : 16px !important; }*/
+.listeMusiques table tr td.action button {
+    margin : 0 !important;
+    padding : 0 !important;
+    height : 18px !important;
+    width : 18px !important;
+}
+
+.listeMusiques table tr td.action button span {
+    font-size : 18px !important;
+}
 
 .listeMusiques .fetching { color : grey; }
 .listeMusiques .ratingStar { cursor : pointer; }
