--- a/src/mytunes-front/src/style/components/playlist.css
+++ b/src/mytunes-front/src/style/components/playlist.css
@@ -51,4 +51,15 @@
 #playlistTab li span.titre { width : calc(var(--playlist-tab-width) - 65px); }
 #playlistTab li span.duree { width : 35px; color : grey; font-size : 12px; line-height : var(--general-font-size); text-align : right; padding-right : 3px; }
 
-#playlistTab li svg      { height : 16px !important; width : 16px !important; }
+/*#playlistTab li svg      { height : 16px !important; width : 16px !important; }*/
+
+#playlistTab span.play button {
+    margin : 0 !important;
+    padding : 0 !important;
+    height : 18px !important;
+    width : 18px !important;
+}
+
+#playlistTab span.play button span {
+    font-size : 18px !important;
+}
