--- a/src/mytunes-front/src/style/components/lecteur.css
+++ b/src/mytunes-front/src/style/components/lecteur.css
@@ -1,16 +1,19 @@
 :root {
     --lecteur-height: 100px;
     --volume-slider-width : 100px;
+
+    --play-button-size : 50px;
+    --prev-next-button-size : 25px;
 }
 
-.lecteur {
+#lecteurWrapper {
     display : inline-block;
     height : var(--lecteur-height);
     width : 100%;
     text-align : center;
 }
 
-.lecteur div.lecteurDiv {
+#lecteurWrapper div#lecteurDiv {
     display: inline-block;
     width : 75%;
     margin-top : calc(var(--lecteur-height) * 0.12);
@@ -20,17 +23,57 @@
     border-radius : 15px;
 }
 
-.lecteur div.lecteurDiv h1 {
+#lecteurWrapper div#lecteurDiv h1 {
     text-align : center;
     font-size : 16px;
 }
 
-.lecteur div.lecteurDiv h2 {
+#lecteurWrapper div#lecteurDiv h2 {
     text-align : center;
     font-size : 12px;
     color : grey;
 }
 
+#lecteurWrapper #lecteurAction {
+    float : left;
+    height : 100%;
+    width : 150px;
+    /*position : relative;*/
+    display : flex;
+}
+
+#lecteurWrapper #lecteurAction button {
+    /*position: absolute;*/
+    /*top: 50%;*/
+    /*transform: translateY(-50%);*/
+    display : inline-block;
+    margin : auto;
+}
+
+#lecteurWrapper #lecteurAction button.PlayButton {
+    height : var(--play-button-size);
+    width : var(--play-button-size);
+}
+
+#lecteurWrapper #lecteurAction button.PrevButton,
+#lecteurWrapper #lecteurAction button.NextButton {
+    padding : 4px;
+    height : var(--prev-next-button-size);
+    width : var(--prev-next-button-size);
+}
+
+
+#lecteurWrapper #lecteurAction button.NextButton .Icon,
+#lecteurWrapper #lecteurAction button.PrevButton .Icon {
+    width: calc(var(--prev-next-button-size) * 0.55);
+    height: calc(var(--prev-next-button-size) * 0.55);
+}
+
+
+#lecteurWrapper #lecteurDisplay {
+    height : 100%;
+    padding-top : 8px;
+}
 
 
 
