WIP : Progress bar

--- a/src/mytunes-front/src/style/components/lecteur.css
+++ b/src/mytunes-front/src/style/components/lecteur.css
@@ -77,6 +77,12 @@
 
 
 
+#lecteurWrapper #lecteurDisplay #lecteurProgress {
+    padding-left: 180px;
+}
+
+
+
 aside#volumeSlider {
     position : fixed;
     right : 0;
