--- a/src/mytunes-front/src/style/components/volumeSlide.css
+++ b/src/mytunes-front/src/style/components/volumeSlide.css
@@ -3,6 +3,7 @@
     --slider-active-color : #4B6FA2;
     --slider-unknown-color : red;
     --slider-inactive-color : darkgray;
+    --slider-loading-color : #404040;
 
     --button-main-color : black;
     --button-hover-color : #5a86c4;
