--- a/src/mytunes-front/src/style/components/playlistMenu.css
+++ b/src/mytunes-front/src/style/components/playlistMenu.css
@@ -41,6 +41,7 @@
 /*#playlistMenu li svg      { height : 16px !important; width : 16px !important; }*/
 
 #playlistMenu li.alreadyPlayed { color : gray; font-style: italic; }
+#playlistMenu li.isPlaying { color : black !important; font-style: normal !important; font-weight : bold; }
 
 #playlistMenu span.play button {
     margin : 0 !important;
