--- a/src/mytunes-front/src/style/components/playlistMenu.css
+++ b/src/mytunes-front/src/style/components/playlistMenu.css
@@ -24,7 +24,7 @@
 }
 
 #playlistMenu header button span.active {
-    color : #7575fd !important;
+    color : #4444cc !important;
     text-shadow : 0 0 4px #FFF;
 }
 
