--- a/src/mytunes-front/src/style/components/listeMusiques.css
+++ b/src/mytunes-front/src/style/components/listeMusiques.css
@@ -1,4 +1,5 @@
-.VirtualizeTable div.action       { text-align : center; cursor : pointer; }
+.VirtualizeTable div.action       { text-align : center; }
+.VirtualizeTable .tableCell div.action       { cursor : pointer; }
 .VirtualizeTable div.titre        { text-align : left; }
 .VirtualizeTable div.artiste      { text-align : left; }
 .VirtualizeTable div.duree        { text-align : center; }
@@ -12,11 +13,15 @@
 .VirtualizeTable .ratingStar { cursor : pointer; }
 
 .VirtualizeTable .headerLine { border-top : 1px solid grey; }
+.VirtualizeTable .headerLine .sortIcon { float: right; width: auto; }
 .VirtualizeTable .headerLine .ReactVirtualized__Grid { overflow: hidden !important; }
 
-.VirtualizeTable .tableHeader { background-color: #c9c9c9; font-weight: bold; }
+.VirtualizeTable .tableHeader { background-color: #c9c9c9; font-weight: bold; cursor : default; }
+.VirtualizeTable .tableHeader.sortable { cursor : pointer; }
+.VirtualizeTable .tableHeader.sorted { background-color: #e2e2e2; }
 .VirtualizeTable .tableHeader,
 .VirtualizeTable .tableCell { display : flex; }
+.VirtualizeTable .tableHeader span { padding-left : 5px; }
 .VirtualizeTable .tableHeader span,
 .VirtualizeTable .tableCell span { margin : auto 0; width : 100%; }
 
