--- a/src/mytunes-front/src/style/components/listeMusiques.css
+++ b/src/mytunes-front/src/style/components/listeMusiques.css
@@ -90,6 +90,10 @@
 
 
 
+#listeMusiques .genre > span {
+    height : 30px !important;
+}
+
 #listeMusiques .genre > span > div,
 #listeMusiques .genre > span > div > div {
     height : 30px !important;
@@ -106,10 +110,14 @@
     padding : 0 !important;
 }
 
-#listeMusiques .genre > span > div > div > div > div {
-    top : -30px !important;
+#listeMusiques .genre > span > div > div > div:nth-child(1) > div:nth-child(2) {
+    top : 1px !important;
     height : 30px !important;
     line-height : 30px !important;
+}
+
+#listeMusiques > div > div > div > div > div:nth-child(1) > div > div:nth-child(2) > div > div > div:nth-child(14) > span > div > div:nth-child(3) {
+    margin-top : -30px;
 }
 
 #listeMusiques .genre.oddRow svg { fill : #a0a0a0 !important; }
