Params in URL for Genres

--- a/src/mytunes-front/src/style/components/listeGenres.css
+++ b/src/mytunes-front/src/style/components/listeGenres.css
@@ -1,5 +1,8 @@
 #listeGenres {
     width : calc(100% - var(--volume-slider-width));
+}
+
+#listeGenres #chooseGenre {
     text-align : center;
 }
 
