--- a/src/mytunes-front/src/style/components/tableMusiques.css
+++ b/src/mytunes-front/src/style/components/tableMusiques.css
@@ -59,69 +59,69 @@
 }
 
 
-#listeMusiques {
+#tableMusiques {
     width : calc(100% - var(--volume-slider-width));
 }
 
-#listeMusiques #searchMusique {
+#tableMusiques #searchMusique {
     display : inline-block;
     width : 100%;
     text-align : right;
     margin-bottom : 3px;
 }
 
-#listeMusiques #searchMusique span.material-icons {
+#tableMusiques #searchMusique span.material-icons {
     font-size : calc(var(--general-font-size) + 4px) !important;
     color : #686868 !important;
     vertical-align: middle;
 }
 
-#listeMusiques #searchMusique .textField {
+#tableMusiques #searchMusique .textField {
     font-size : var(--general-font-size) !important;
     line-height : var(--general-font-size) !important;
     height : calc(var(--general-font-size) + 6px) !important;
     width : 25% !important;
 }
 
-#listeMusiques #searchMusique .textField hr {
+#tableMusiques #searchMusique .textField hr {
     bottom : -1px !important;
 }
 
 
 
 
-#listeMusiques .genre > span {
+#tableMusiques .genre > span {
     height : 30px !important;
 }
 
-#listeMusiques .genre > span > div,
-#listeMusiques .genre > span > div > div {
+#tableMusiques .genre > span > div,
+#tableMusiques .genre > span > div > div {
     height : 30px !important;
     line-height : 30px !important;
     font-size : 12px !important;
 }
 
-#listeMusiques .genre > span > div {
+#tableMusiques .genre > span > div {
     width : 100% !important;
 }
 
-#listeMusiques .genre > span > div > div > div > button {
+#tableMusiques .genre > span > div > div > div > button {
     height : 30px !important;
     padding : 0 !important;
 }
 
-#listeMusiques .genre > span > div > div > div:nth-child(1) > div:nth-child(2) {
+#tableMusiques .genre > span > div > div > div:nth-child(1) > div:nth-child(2) {
     top : 1px !important;
     height : 30px !important;
     line-height : 30px !important;
 }
 
-#listeMusiques > div > div > div > div > div:nth-child(1) > div > div:nth-child(2) > div > div > div:nth-child(14) > span > div > div:nth-child(3) {
+#tableMusiques > div > div > div > div > div:nth-child(1) > div > div:nth-child(2) > div > div > div:nth-child(14) > span > div > div:nth-child(3) {
     margin-top : -30px;
 }
 
-#listeMusiques .genre svg { fill : #a0a0a0 !important; }
-#listeMusiques .genre hr { bottom : 5px !important; border-color : #a0a0a0 !important; }
+#tableMusiques .genre svg { fill : #a0a0a0 !important; }
+#tableMusiques .genre hr { bottom : 5px !important; border-color : #a0a0a0 !important; }
 
 div[role=menu] span[role=menuitem].disabled { color : grey !important; }
 div[role=menu] span[role=menuitem].disabled.checked { color : #966090 !important; }
