--- a/src/mytunes-front/src/style/components/tableMusiques.css
+++ b/src/mytunes-front/src/style/components/tableMusiques.css
@@ -26,7 +26,7 @@
 .VirtualizeTable .tableCell span { margin : auto 0; width : 100%; }
 
 .VirtualizeTable .evenRow { background-color: white; }
-.VirtualizeTable .oddRow { background-color: #e9e9e9; }
+.VirtualizeTable .oddRow { background-color: #f3f3f3; }
 
 
 .VirtualizeTable .tableCell.action {
