--- a/src/mytunes-front/src/style/index.css
+++ b/src/mytunes-front/src/style/index.css
@@ -85,3 +85,32 @@ div.textField input {
 .playlistSortableHelper span.play button span {
   font-size : 18px !important;
 }
+
+.notification-warning {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#fb9209+0,ffb657+100 */
+  background: #fb9209; /* Old browsers */
+  background: -moz-linear-gradient(top, #fb9209 0%, #ffb657 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #fb9209 0%,#ffb657 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #fb9209 0%,#ffb657 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fb9209', endColorstr='#ffb657',GradientType=0 ); /* IE6-9 */
+
+  text-shadow : 1px 1px 0 #444;
+}
+
+.notification-info {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2f96b4+0,5bbad6+100 */
+  background: #2f96b4; /* Old browsers */
+  background: -moz-linear-gradient(top, #2f96b4 0%, #5bbad6 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #2f96b4 0%,#5bbad6 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #2f96b4 0%,#5bbad6 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2f96b4', endColorstr='#5bbad6',GradientType=0 ); /* IE6-9 */
+}
+
+.notification-error {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cf0404+0,ff3019+100 */
+  background: #cf0404; /* Old browsers */
+  background: -moz-linear-gradient(top, #cf0404 0%, #ff3019 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #cf0404 0%,#ff3019 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #cf0404 0%,#ff3019 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cf0404', endColorstr='#ff3019',GradientType=0 ); /* IE6-9 */
+}
