--- a/src/mytunes-front/src/style/index.css
+++ b/src/mytunes-front/src/style/index.css
@@ -25,6 +25,11 @@ h1, h2, h3, h4, h5, h6, ul, li {
   padding : 0;
 }
 
+
+main {
+  width : calc(100% - var(--volume-slider-width));
+}
+
 ul { list-style-type : none; }
 
 .metal-bg {
