--- a/src/mytunes-front/src/style/components/savedPlaylists.css
+++ b/src/mytunes-front/src/style/components/savedPlaylists.css
@@ -21,6 +21,14 @@
     display: inline-block;
     width : 50%;
     vertical-align: top;
+    height : 100%;
+    overflow : auto;
+}
+
+#musiquesPlaylist h1 {
+    text-align : center;
+    font-size : 21px;
+    margin-bottom : 5px;
 }
 
 #musiquesPlaylist ul {
@@ -32,9 +40,14 @@
 #musiquesPlaylist li:nth-child(odd) { background-color : #f3f3f3; }
 #musiquesPlaylist li:nth-child(even) { background-color : white; }
 
+#musiquesPlaylist span.noData { font-weight : bold; font-size : 14px; }
+
 #musiquesPlaylist li span.musiqueCell { display : table-cell; }
 
-#musiquesPlaylist li span.titre { width : calc(100% - 200px); padding : 0 3px; }
+#musiquesPlaylist li span.titre { width : calc(100% - 235px); padding : 0 3px; }
 #musiquesPlaylist li span.bpm { width : 50px; text-align : center; }
 #musiquesPlaylist li span.classement { width : 75px; text-align : center; }
 #musiquesPlaylist li span.duree { width : 75px; text-align : center; }
+#musiquesPlaylist li span.delete { width : 35px; text-align : center; }
+#musiquesPlaylist li span.delete button { padding : 0 !important; height : 30px !important; width : 30px !important; vertical-align: middle; }
+#musiquesPlaylist li span.delete span.material-icons { font-size : 20px !important; line-height : 30px !important; vertical-align: middle; }
